css comun changes

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6737,6 +6737,10 @@ h5 a {
   color: #58585a;
   font-weight: bold;
 }
+h2 {
+  color: #58585a;
+  font-weight: bold;
+}
 .h3image-promotional-materials {
   background-image: url('../images/promotional.png');
   background-position: right;
