--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -48,6 +48,11 @@ h5{
 	}
 }
 
+h2{
+	color: @color-text-grey;
+	font-weight: bold;
+}
+
  .h3image-promotional-materials{
     background-image: @image-map-white;
     background-position: right;
