--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -25,7 +25,7 @@ h3.pane-title{
 h4{
 	a{
 		color: @color-text-grey;
-		font-size: @font-size0-75;
+		font-size: @font-size0-7;
 	    font-weight: bold;	
 	}
 }
@@ -72,7 +72,7 @@ h2{
 		font-style: italic;
 		display: block;
 		text-align: right;
-		font-size: @font-size0-85;
+		font-size: @font-size1;
 		margin-top: 20px;
 		&:before{
 			content:'>';
@@ -86,10 +86,7 @@ a.more-link{
 	font-style: italic;
 	display: block;
 	text-align: right;
-	font-size: @font-size0-85;
-	position: absolute;
-    right: 30px;
-    bottom: 15px;
+	font-size: @font-size1;
 	&:before{
 		content:'>';
 	}
@@ -115,6 +112,18 @@ a.more-link{
     		text-align: right;
     	}
 	}
+}
+
+/*Etiquetas azuler de pais e idioma*/
+.field.field-name-field-country, .field-type-language-field {
+    background-color: #10b2e4;
+    display: inline-block;
+    color: white;
+    padding: 3px 16px;
+    font-size: 0.8em;
+    font-weight: bold;
+    font-style: italic;
+    margin-top: 1em;
 }
 
 /*END estilos comunes
@@ -173,8 +182,13 @@ a.more-link{
     			margin-bottom: 20px;
     			.field-name-field-image{
     				img{
-    					width: 100%;
-    					max-height: 310px; 
+    					//width: 100%;
+    					//max-height: 310px; 
+    				}
+    			}
+    			h4{
+    				a{
+    					font-size: 1.2em;
     				}
     			}
 			}
@@ -183,6 +197,20 @@ a.more-link{
 				padding: 10px;
 				padding-bottom: 40px;
 				min-height: 250px;
+				a.more-link{
+					color: @color-see-more;
+					font-weight: bold;
+					font-style: italic;
+					display: block;
+					text-align: right;
+					font-size: @font-size0-8;
+					position: absolute;
+				    right: 30px;
+				    bottom: 15px;
+					&:before{
+						content:'>';
+					}
+				}
 			}
 		}
 	}
@@ -217,8 +245,8 @@ a.more-link{
     		margin-bottom: 20px;
     		.field-name-field-image{
     			img{
-    				width: 100%;
-    				max-height: 310px; 
+    				//width: 100%;
+    				//max-height: 310px; 
     			}
     		}
     		.field-name-title-field{
