--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -97,6 +97,7 @@
 						background-color: @color-menu-icons;
     					border: 0px solid @color-menu-icons;
     					padding: 4px 0px 2px 11px;
+    					overflow: hidden;
     					&:before{
     						content:"\e003";
     						margin-right: 30px;
