css changes - whats new in oira 11:07 09-06-2016

--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -909,6 +909,7 @@
 
 @color-text-grey: #58585a;
 @color-text-purple: #967ea7;
+@color-text-purple-darker: #786586;
 @color-text-white: @color-white;
 @color-red: #343434;
 @color-background-light-purple: #dfd8e4;
