--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6745,6 +6745,7 @@ h3.pane-title {
   border-bottom: 2px solid #967ea7;
   font-size: 2.2em;
   padding-bottom: 3px;
+  margin-bottom: 25px;
   margin-top: 50px;
   font-family: 'Oswald';
 }
@@ -6770,8 +6771,14 @@ h5 a {
   font-weight: bold;
 }
 h2 {
+  font-size: 16px;
   color: #58585a;
   font-family: 'Oswald';
+}
+h2 a {
+  color: #786586;
+  font-family: 'Oswald';
+  font-size: 2.6em;
 }
 .h3image-promotional-materials {
   background-image: url('../images/promotional.png');
@@ -6895,8 +6902,7 @@ a.more-link:before {
 }
 #block-system-main .panels-flexible-row-new-6 .panels-flexible-region-new-news_section .views-item-columns-container {
   background-color: #ffffff;
-  padding: 10px;
-  padding-bottom: 40px;
+  padding: 15px;
   min-height: 358px;
 }
 #block-system-main .panels-flexible-row-new-6 .panels-flexible-region-new-news_section .views-item-columns-container h4 a {
@@ -6909,7 +6915,6 @@ a.more-link:before {
   display: block;
   text-align: right;
   font-size: 1em;
-  position: absolute;
   right: 30px;
   bottom: 15px;
 }
@@ -6941,7 +6946,7 @@ a.more-link:before {
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container {
   background-color: #ffffff;
-  padding: 10px;
+  padding: 15px;
 }
 #block-system-main .panels-flexible-row-new-16 .view-display-id-block_1 .views-item-columns-container a {
   display: block;
@@ -7004,11 +7009,45 @@ a.more-link:before {
   margin-bottom: 20px;
 }
 .node-type-article .panels-flexible-row-new-13 #additional-resources-external_url-pane .view-additional-resources .views-item-columns-container {
-  padding: 10px!important;
+  padding: 15px !important;
 }
 /*END ARTICLES*/
 /*WHAT'S NEW SECTION
 *********************************************************************/
+.page-what-is-new .panels-flexible-row-new-2 {
+  padding-top: 30px;
+  background-color: #dfd8e4;
+}
+.page-what-is-new .panels-flexible-row-new-3 {
+  background-color: #786586;
+  margin-top: 10px;
+}
+.page-what-is-new .panels-flexible-row-new-3 h3.pane-title {
+  color: #ffffff;
+  border-bottom: 2px solid #ffffff;
+  margin-bottom: 0px;
+}
+.page-what-is-new .panels-flexible-row-new-3 .views-item-columns-container {
+  padding: 15px;
+  margin-top: 30px;
+  min-height: 230px;
+}
+.page-what-is-new .panels-flexible-row-new-3 .more-link a {
+  color: #ffffff;
+}
+.page-what-is-new .panels-flexible-row-new-6 {
+  background-color: #ffffff !important;
+}
+.page-what-is-new .panels-flexible-row-new-6 .views-item-columns-container {
+  background-color: #dfd8e4;
+  min-height: 515px;
+}
+.page-what-is-new .panels-flexible-row-new-6 .views-item-columns-container .views-field-field-image {
+  min-height: 202px;
+}
+.page-what-is-new .panels-flexible-row-new-6 .views-item-columns-container .tool-teaser-content-wrapper {
+  padding: 15px;
+}
 /*FOOTER
 ********************************************/
 .site-footer {
