--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -19,6 +19,7 @@ h3.pane-title{
 	font-size: @font-size2-2;
 	padding-bottom: 3px;
 	//font-weight: bold;
+	margin-bottom: 25px;
 	margin-top: 50px;
 	font-family: @font-family-base-2;
  }
@@ -51,9 +52,15 @@ h5{
 }
 
 h2{
+	font-size: @font-size-base;
 	color: @color-text-grey;
 	font-family: @font-family-base-2;
 	//font-weight: bold;
+	a{
+		color: @color-text-purple-darker;
+		font-family: @font-family-base-2;
+		font-size: 2.6em;
+	}
 }
 
  .h3image-promotional-materials{
@@ -208,8 +215,7 @@ a.more-link{
 			}
 			.views-item-columns-container{
 				background-color: @color-white;
-				padding: 10px;
-				padding-bottom: 40px;
+				padding: 15px;
 				min-height: 358px;
 				h4{
 					a{
@@ -223,7 +229,6 @@ a.more-link{
 					display: block;
 					text-align: right;
 					font-size: @font-size1;
-					position: absolute;
 				    right: 30px;
 				    bottom: 15px;
 					&:before{
@@ -278,7 +283,7 @@ a.more-link{
 		.view-display-id-block_1{
 			.views-item-columns-container{
 				background-color: @color-white;
-				padding: 10px;
+				padding: 15px;
 				a{
 					display: block;
     				.glyphicon-new-window{
@@ -362,7 +367,7 @@ a.more-link{
 		#additional-resources-external_url-pane{
 			.view-additional-resources{
 				.views-item-columns-container{
-						padding: 10px!important;
+						padding: 15px !important;
 					}
 				}
 			}
@@ -379,7 +384,42 @@ a.more-link{
 /*WHAT'S NEW SECTION
 *********************************************************************/
 .page-what-is-new{
-	
+	.panels-flexible-row-new-2{
+		padding-top: 30px;
+		background-color: @color-primary;
+	}
+	.panels-flexible-row-new-3{
+		background-color: @color-primary-dark;
+		margin-top: 10px;
+		h3.pane-title{
+			color: @color-white;
+			border-bottom: 2px solid @color-white;
+			margin-bottom: 0px;
+		}
+		.views-item-columns-container{
+			padding: 15px;
+			margin-top: 30px;
+    		min-height: 230px;
+		}
+		.more-link{
+			a{
+				color: @color-white;
+			}
+		}
+	}
+	.panels-flexible-row-new-6{
+		background-color: @color-white !important;
+		.views-item-columns-container{
+			background-color: @color-primary;
+			min-height: 515px;
+			.views-field-field-image{
+				min-height: 202px;//testing
+			}
+			.tool-teaser-content-wrapper{
+				padding: 15px;
+			}
+		}
+	}
 }
 
 
